--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.9",
-    "jsonwebtoken": "^9.0.2"
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "raw-body": "^3.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.6.1",
+    "@types/raw-body": "^2.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
+  },
+  "overrides": {
+    "http-proxy": "^1.18.1"
   }
 }
